# Post-Training-LLM

./: .gitignore  README.md  download_models.py  index.html  pyproject.toml  requirements.txt
DPO/: DPO.ipynb  dpo_qwen.py
Online-RL/: Online-rl.ipynb  grpo_qwen.py
SFT/: download_models.py  requirements.txt  sft.ipynb  sft_smol.py
SFT/sft/: sft_smol.py
