[project]
name = "Post-Training-LLM"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "torch==2.5.1",          # <-- upgrade this
    "numpy==1.26.4",
    "transformers==4.52.4",
    "huggingface-hub==0.33.0",
    "datasets==3.6.0",
    "trl==0.14.0",
    "jinja2==3.1.2",
    "markupsafe==2.0.1",
    "tabulate==0.9.0",
    "pandas==2.3.0",
]